css/portfolio.css
@import url('https://rsms.me/inter/inter.css');
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    margin-top: 0;
}
 
html,
body,
div{
    margin: 0;
    padding: 0;
}
html { 
    box-sizing: border-box;
    font-family: 'Inter', -apple-system, BlinkMacSystemFont, "myriad-pro", sans-serif;
    line-height: 1.5;
    font-weight: 400;
    text-shadow: none;
    font-size: 16px;
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
    text-size-adjust: 100%;
}
@supports (font-variation-settings: normal) {
    html { font-family: 'Inter var', sans-serif; }
  }
body {
	-webkit-font-feature-settings: "liga" 1, "kern";
	font-feature-settings: "liga" 1, "kern";
	text-rendering: optimizeLegibility;
    color:#111;
    background: #fff;
}
dl {
  padding: 0;
}

dd {
  margin-left: 0;
}
h1,
h2,
h3,
h4{
  text-indent: 0;
  
}

h1 
{
    font-family: 'Poppins', sans-serif;
    font-size: 1.6em;
    font-weight: 500;	
    line-height: 1em;
    margin: 0;
    padding:0 0 12px 0;
}
h2, 
h3,
h4 {
    font-family: 'Poppins', sans-serif;
    font-size: 2.25em;
    margin: 0;
    font-weight: 600;
    line-height: 1.25em;
    padding:0 0 12px 0;
    letter-spacing: 1px;
}
.section h2
{
    padding:12px 0 12px 0;
    /* border: 1px solid red; */
}
main h1
{
    padding:0;
}
/* h2,.section h1
{
	margin-bottom: 0.33em;
} */
p.bio
{
	padding: 0;
	margin: 0 12px 0 0;
	/* letter-spacing: 0.002em; */
	font-weight: 400;
}
h3 a,
h4 a {
	color:#111;
}

header {
  display: block;
  padding-top: 1.5em;
  padding-bottom: 0.5em;
  margin: 0;
}
#dawid-kubiak
{
	position:relative;
    float:left;
    display: inline-block;
}

main 
{
  display: block;
}               
#page-wrap 
{
        /*position: absolute;*/
        display: block; 
        margin: 0 auto;
        width: 560px;
        word-wrap: break-word;
}

#logo
{
    margin-bottom: 30px;
}        
address { color: #EA4E35; font-style: normal;}
a { 
	color: #111;
	text-decoration: none;
	
}
a:hover { color: #111; text-decoration: none; }


p,address { color: #111; font-size: 1em; font-weight: normal; padding: 0; margin: 0;}
address { text-align: center; color: #EA4E35; font-style: normal;}

.section 
{
    padding: 0;
    margin: 0;
	/* margin-bottom: 1em; */
}
.section .responsive
{
	width: 100%;
    height: auto;
}
.smaller
{
    font-size: 0.8em;
}

.centered {
    display: block;
    margin-left: auto;
    margin-right: auto;
}
.hidden
{
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}
.complementary
{
    margin-bottom: 1.5em;
	margin-top: 1.5em;
}


.complementaryTop
{
    position:relative;
    float:right;
    display: inline-block;
    white-space: nowrap;
	
}

.clear
{
    width:100%;
    clear: both;
}
.complementaryTop:after
{
    content: "\2191";
    padding-left: 0.25em;
}
header .buttons
{
    margin-bottom: 12px;
}
.buttons
{
	margin-top:1em;
    text-align: center;
    margin-bottom: 0;
    /* font-weight: 500; */
}
.complementary #mikko a, .bio a
{
	font-weight: 500;
}
#backtotop a 
{
    border:none;
}
.buttons a
{
	margin: 0 0.25em;
    line-height: 1.75em;
    border-radius: 5px;
    border: 2px solid #111;
    box-sizing: border-box;
    padding: 5px 8px 3px 8px;
	cursor: pointer;
    display: inline-block;
    background: transparent;
    vertical-align: middle;
    color: #111;
   
    /* letter-spacing: 0.2px; */
    /* background: #026fc9;  */
    font-size: 14px;
    font-weight: 600;
    text-transform: uppercase;
}
.buttons a svg{
    fill: currentColor;
}
.complementary .buttons
{
	text-align: center;
}
#menu-bar
{
	display: block;
	height: 40px;
	background-color: gray;
	width:100%;
}
.wrap{
    max-width: 1200px;
    margin: 0 auto;
    padding: 1em;
}
 
#primary{
    max-width: 650px;
    margin: 0 auto;
}
.videoWrapper {
	position: relative;
	padding-bottom: 56.25%; /* 16:9 */
	padding-top: 25px;
	height: 0;
}
.videoWrapper iframe {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}
@media (prefers-color-scheme: dark) {
    a,
    p,
    h3 a,
    h4 a {
      color: #eee;
    }
    body {
        background:#222;
        color: #eee;
    }
    .buttons a
    {
        border-color:#eee ;
        color: #eee;
    }
    a:hover { color: #eee; }
}

